# appstore_data_agent

./: README.md  VOODOO_game_center_games.csv  game_center_games.csv  pyproject.toml  report.md
reports/: miniclip.json  nintendo.json  supercell.json  sybo.json  voodoo.json
src/appstore_data_agent/: __init__.py  crew.py  main.py
src/appstore_data_agent/archieve/: crew.py  main.py
src/appstore_data_agent/archieve/config/: agents.yaml  samplereport.json
src/appstore_data_agent/archieve/tools/: csv_reader_tool.py  custom_tool.py
src/appstore_data_agent/config/: agents.yaml  tasks.yaml
src/appstore_data_agent/tools/: __init__.py  app_store_scraper_tool.py  custom_tool.py  developer_name_identifier.py  developer_url_finder.py  intent_identifier.py
tests/: test_custom_tool.py  test_developer_url_finder.py  test_intent_identifier.py
